--- a/linkedin_full_starter/package.json
+++ b/linkedin_full_starter/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "linkedin-full-starter",
+  "name": "linkedin-clone",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@supabase/supabase-js": "2.45.1",
-    "next": "14.2.5",
+    "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
